<resources>
    <string name="app_name">FitNow</string>
    <string name="home_menu">Home</string>
    <string name="run_menu">Running</string>
    <string name="cycling_menu">Cycling</string>
    <string name="walk_menu">Walking</string>
    <string name="help_menu">Help</string>
    <string name="home_header_title">Welcome to FitNow</string>
    <string name="home_subheading">Decide your own path, track your fitness and invite your friends to challenge!</string>
    <string name="google_maps_key">AIzaSyDt-XpvxXIB6WOcBauWZK_S8Z2R7fzVtqc</string>
    <string name="start_title">Start</string>
    <string name="my_activity_title">My Activity</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="walking_title">Walking</string>
    <string name="running_title">Running</string>
    <string name="loading">Loading..</string>
    <string name="message_successfully">Login successful</string>
    <string name="message_unsuccess">Login failed, please check your email or password again</string>
    <string name="message_title_finish">Are you finish?</string>
    <string name="message_subTitle_finish">Your activity data will be saved</string>
    <string name="message_uploading">Uploading file...</string>
    <string name="message_upload_success">Upload success</string>
    <string name="message_upload_failure">Upload failed, please check your network connection</string>
    <string name="message_camera_error">Please grant access to your camera folder</string>
    <string name="message_forgot_password">Forgot password?</string>
    <string name="message_guest_user">Continue as guest</string>
    <string name="google_sign_in_failed">Google Sign In Failed. Check your internet connection</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_sign_up">Get started</string>
    <string name="message_network_unsuccess">Failed to save data, please check your connection</string>
    <string name="error_message_desc">Description must not be empty!</string>

    <!-- Common -->
    <string name="common_ok">OK</string>
    <string name="common_loading">Loading..</string>
    <string name="common_email_error_empty">Email must not be empty!</string>
    <string name="common_email_error_invalid">Email entered is invalid!</string>
    <string name="common_invalid_email">Email is not valid!</string>
    <string name="common_invalid_password">Password is incorrect!</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">Cancel</string>
    <string name="common_permission_required">Permissions are required to access this feature</string>
    <string name="common_username_invalid">Username must be greater than 2 characters</string>
    <string name="common_network_error">Please check your internet connection and try again</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_invite">Invite</string>
    <string name="login_tab_title">Login</string>
    <string name="register_tab_title">Register</string>
    <string name="error_empty_message">Field must not be empty</string>
    <string name="error_google_play_services">Unable to connect to google play services</string>
    <string name="auth_progress">"Auth in progress"</string>
    <string name="error_listener">"Listener not registered"</string>

    <string name="rate_your_workout">Rate your workout</string>
    <string name="km_placeholder">-:--/km</string>
    <string name="distance_travelled_label">Distance travelled</string>
    <string name="total_time_label">Total time</string>
    <string name="description_hint_label">Enter activity description</string>
    <string name="speed_label">Speed</string>
    <string name="pedal_label">Pedal speed rpm</string>
    <string name="steps_taken_label">Steps taken</string>
    <string name="calories_burned_label">Calories burned</string>
    <string name="gallery_empty_message">You have no photos</string>
    <string name="results_tab_title">Results</string>
    <string name="gallery_tab_title">Gallery</string>

    <string name="facebook_app_id">292463437848240</string>

    <string name="invite_message">Try out our fitness app. Decide your own path, track your fitness and challenge your friends!</string>
    <string name="invite_title">FitNow</string>
</resources>
