<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu"/>
        <item
            android:id="@+id/nav_running"
            android:icon="@drawable/ic_directions_run"
            android:title="@string/run_menu"/>
        <item
            android:id="@+id/nav_bike"
            android:icon="@drawable/ic_directions_bike"
            android:title="@string/cycling_menu"/>
        <item
            android:id="@+id/nav_walk"
            android:icon="@drawable/ic_directions_walk"
            android:title="@string/walk_menu"/>


    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_invite"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_input"
            android:title="@string/nav_logout"/>

    </group>
</menu>