<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/message_title_finish"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/message_subTitle_finish"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/common_yes"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:background="@color/grey"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="bottom"/>

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:text="@string/common_no"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_alignBaseline="@+id/yesButton"
                android:layout_alignBottom="@+id/yesButton"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"/>

        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>


