<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fitnow_login"
            android:scaleType="centerCrop"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/infoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_outline"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/spacing_normal_medium"
            android:layout_marginEnd="@dimen/spacing_normal_medium"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/border"
            android:padding="@dimen/spacing_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_header_title"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryLight"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_subheading"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="italic|bold"
                android:textColor="@color/colorPrimaryLight"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/spacing_large"
            android:background="@drawable/border"
            android:orientation="vertical">

            <Button
                style="@style/menuButtonStyles"
                android:id="@+id/runBtn"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_directions_run_white"
                android:text="@string/run_menu"/>

            <Button
                style="@style/menuButtonStyles"
                android:id="@+id/cycleBtn"
                android:background="#50000000"
                android:drawableStart="@drawable/ic_directions_bike_white"
                android:text="@string/cycling_menu"/>

            <Button
                style="@style/menuButtonStyles"
                android:id="@+id/walkBtn"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_directions_walk_white"
                android:text="@string/walk_menu"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>